@@ -2,4 +2,5 @@ BEGIN {
 	s == "hello, world";
 	s + 1
 	;;
+	"s" 1
 }
