@@ -1,4 +1,5 @@
 gawk: noeffect.awk:2: warning: statement may have no effect
 gawk: noeffect.awk:3: warning: statement may have no effect
+gawk: noeffect.awk:5: warning: statement may have no effect
 gawk: noeffect.awk:2: warning: reference to uninitialized variable `s'
 gawk: noeffect.awk:3: warning: reference to uninitialized variable `s'
