@@ -1,3 +1,7 @@
+2017-05-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* noeffect.awk, noeffect.ok: Updated after code change.
+
 2017-05-01         Aharon Robbins       <aharon.robbins@intel.com>
 
 	* Makefile.am (sourcesplit): New test.
