@@ -1,3 +1,8 @@
+2017-05-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (add_lint): Make ``no effect'' check smarter about
+	reporting line numbers.
+
 2017-05-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y (nextc): Fix to change of 2017-04-24 such that
